@@ -1,1 +1,11 @@
 # workshop-javafx-jdbc
+
+# NO ECLIPSE
+## Comando para adicionar a Main.java
+> Botão direito do mouse ; Run configurations; Na aba -> Arguments -> VM Arguments; COPIE E COLE O COMANDO:
+
+```java
+--module-path /home/watpekin/Documentos/MeusDocumentos/Cursos/Java/JAVA_FX/openjfx-15.0.1_linux-x64_bin-sdk/javafx-sdk-15.0.1/lib
+ --add-modules=javafx.fxml,javafx.controls
+
+```
